--- a/package.json
+++ b/package.json
@@ -3,14 +3,16 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "android": "react-native run-android",
-    "ios": "react-native run-ios",
+    "clean:android": "cd android && ./gradlew clean && cd ..",
+    "android": "npx solidarity && yarn clean:android && adb reverse tcp:9090 tcp:9090 && npx react-native run-android",
+    "ios": "npx solidarity && npx pod-install && npx react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
     "test": "jest",
     "lint:check": "tsc && eslint 'src/**/*.{js,jsx,ts,tsx}'",
     "lint:fix": "tsc && eslint 'src/**/*.{js,jsx,ts,tsx}' --fix",
-    "pretty": "prettier --config ./.prettierrc.js --write \"src/**/*.{js,jsx,ts,tsx,json}\""
+    "pretty:check": "prettier --config ./.prettierrc.js --check \"src/**/*.{js,jsx,ts,tsx,json}\"",
+    "pretty:write": "prettier --config ./.prettierrc.js --write \"src/**/*.{js,jsx,ts,tsx,json}\""
   },
   "dependencies": {
     "react": "18.2.0",
@@ -44,6 +46,8 @@
     "metro-react-native-babel-preset": "0.73.9",
     "prettier": "^2.8.8",
     "react-test-renderer": "18.2.0",
+    "solidarity": "^3.0.4",
+    "solidarity-react-native": "^2.1.2",
     "typescript": "4.8.4"
   },
   "jest": {
