chore(commit-rules): setup commit rules
add libs: husky, lintstaged add conventional-commit; to set rules before push code to remote repo

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -55,11 +55,12 @@
   ],
   "include": [
     ".eslintrc.js",
+    ".lintstagedrc.js",
     ".prettierrc.js",
     "babel.config.js",
+    "commitlint.config.js",
     "metro.config.js",
     "jest.config.js",
-    "shim.js",
     "index.js",
     "src/**/*"
   ],
