--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
+    "commit": "git-cz",
+    "postinstall": "npx jetify && patch-package && npx husky install",
     "clean:android": "cd android && ./gradlew clean && cd ..",
     "android": "npx solidarity && yarn clean:android && adb reverse tcp:9090 tcp:9090 && npx react-native run-android",
     "ios": "npx solidarity && npx pod-install && npx react-native run-ios",
@@ -22,6 +24,8 @@
     "@babel/core": "^7.20.0",
     "@babel/preset-env": "^7.20.0",
     "@babel/runtime": "^7.20.0",
+    "@commitlint/cli": "^17.6.3",
+    "@commitlint/config-conventional": "^17.6.3",
     "@react-native-community/eslint-config": "^3.2.0",
     "@tsconfig/react-native": "^2.0.2",
     "@types/jest": "^29.2.1",
@@ -30,6 +34,8 @@
     "@typescript-eslint/eslint-plugin": "^5.59.6",
     "@typescript-eslint/parser": "^5.59.6",
     "babel-jest": "^29.2.1",
+    "commitizen": "^4.3.0",
+    "cz-conventional-changelog": "^3.3.0",
     "eslint": "^8.41.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-import-resolver-typescript": "^3.5.5",
@@ -42,8 +48,13 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-native": "^4.0.0",
+    "husky": "^8.0.3",
     "jest": "^29.2.1",
+    "jetifier": "^2.0.0",
+    "lint-staged": "^13.2.2",
     "metro-react-native-babel-preset": "0.73.9",
+    "patch-package": "^7.0.0",
+    "postinstall-postinstall": "^2.1.0",
     "prettier": "^2.8.8",
     "react-test-renderer": "18.2.0",
     "solidarity": "^3.0.4",
@@ -52,5 +63,10 @@
   },
   "jest": {
     "preset": "react-native"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
