feat(component-booster): setup pages/components accelators
install hygen and styled-components, setup hygen script to create components/pages

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -52,7 +52,7 @@
       "*": ["src/utils/@types/*.ts"],
       "~/components": ["src/components"],
       "~/core": ["src/core"],
-      "~/modules": ["src/modules"],
+      "~/libs": ["src/libs"],
       "~/scenes": ["src/scenes"],
       "~/utils": ["src/utils"],
     },
