--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "lint:check": "tsc && eslint 'src/**/*.{js,jsx,ts,tsx}'",
     "lint:fix": "tsc && eslint 'src/**/*.{js,jsx,ts,tsx}' --fix",
     "pretty:check": "prettier --config ./.prettierrc.js --check \"src/**/*.{js,jsx,ts,tsx,json}\"",
-    "pretty:write": "prettier --config ./.prettierrc.js --write \"src/**/*.{js,jsx,ts,tsx,json}\""
+    "pretty:write": "prettier --config ./.prettierrc.js --write \"src/**/*.{js,jsx,ts,tsx,json}\"",
+    "generate:component": "npx hygen generator component",
+    "generate:page": "npx hygen generator page"
   },
   "dependencies": {
     "react": "18.2.0",
-    "react-native": "0.71.8"
+    "react-native": "0.71.8",
+    "styled-components": "^6.0.0-rc.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -31,6 +34,7 @@
     "@types/jest": "^29.2.1",
     "@types/react": "^18.0.24",
     "@types/react-test-renderer": "^18.0.0",
+    "@types/styled-components-react-native": "^5.2.1",
     "@typescript-eslint/eslint-plugin": "^5.59.6",
     "@typescript-eslint/parser": "^5.59.6",
     "babel-eslint": "^10.1.0",
@@ -53,6 +57,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-native": "^4.0.0",
     "husky": "^8.0.3",
+    "hygen": "^6.2.11",
     "jest": "^29.2.1",
     "jetifier": "^2.0.0",
     "lint-staged": "^13.2.2",
