feat(stores): setup redux, redux-persist and redux-toolkit
setup react-redux/redux-persist/redux-toolkint, create root-store and root-reducer, craete example
user-store

BREAKING CHANGE: FIX STYLED-COMPONENTS VERSION

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -49,7 +49,7 @@
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
     "paths": {
-      "*": ["src/utils/@types/*.ts"],
+      "*": ["src/utils/types/*.ts"],
       "~/components": ["src/components"],
       "~/core": ["src/core"],
       "~/libs": ["src/libs"],
@@ -58,7 +58,7 @@
     },
   },
   "types": [
-    "src/utils/@types/*"
+    "src/utils/types/*"
   ],
   "include": [
     ".eslintrc.js",
