--- a/package.json
+++ b/package.json
@@ -19,9 +19,13 @@
     "generate:page": "npx hygen generator page"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.18.1",
+    "@reduxjs/toolkit": "^1.9.5",
     "react": "18.2.0",
     "react-native": "0.71.8",
-    "styled-components": "^6.0.0-rc.1"
+    "react-redux": "^8.0.5",
+    "redux-persist": "^6.0.0",
+    "styled-components": "5.3.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -33,6 +37,7 @@
     "@tsconfig/react-native": "^2.0.2",
     "@types/jest": "^29.2.1",
     "@types/react": "^18.0.24",
+    "@types/react-redux": "^7.1.25",
     "@types/react-test-renderer": "^18.0.0",
     "@types/styled-components-react-native": "^5.2.1",
     "@typescript-eslint/eslint-plugin": "^5.59.6",
