feat(theme): setup theme and icons
create the theme module, map theme json according figma,crete theme store, map figma icons, create
svg set, setup theme provider

BREAKING CHANGE: CREATION OF THEME MODULE

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -51,7 +51,7 @@
     "paths": {
       "*": ["src/utils/types/*.ts"],
       "~/components": ["src/components"],
-      "~/core": ["src/core"],
+      "~/core/*": ["src/core/*"],
       "~/libs": ["src/libs"],
       "~/scenes": ["src/scenes"],
       "~/utils": ["src/utils"],
