--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.18.1",
     "@reduxjs/toolkit": "^1.9.5",
+    "@types/lodash": "^4.14.194",
+    "lodash": "^4.17.21",
     "react": "18.2.0",
     "react-native": "0.71.8",
     "react-redux": "^8.0.5",
