--- a/package.json
+++ b/package.json
@@ -20,11 +20,18 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.18.1",
+    "@react-navigation/bottom-tabs": "^6.5.7",
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/native-stack": "^6.9.12",
     "@reduxjs/toolkit": "^1.9.5",
     "@types/lodash": "^4.14.194",
     "lodash": "^4.17.21",
     "react": "18.2.0",
     "react-native": "0.71.8",
+    "react-native-gesture-handler": "^2.10.1",
+    "react-native-reanimated": "^3.1.0",
+    "react-native-safe-area-context": "^4.5.3",
+    "react-native-screens": "^3.20.0",
     "react-redux": "^8.0.5",
     "redux-persist": "^6.0.0",
     "styled-components": "5.3.10"
