--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-native-reanimated": "^3.1.0",
     "react-native-safe-area-context": "^4.5.3",
     "react-native-screens": "^3.20.0",
+    "react-native-svg": "^13.9.0",
     "react-redux": "^8.0.5",
     "redux-persist": "^6.0.0",
     "styled-components": "5.3.10"
