--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@react-navigation/native-stack": "^6.9.12",
     "@reduxjs/toolkit": "^1.9.5",
     "@types/lodash": "^4.14.194",
+    "formik": "^2.2.9",
     "i18n-js": "^4.2.3",
     "lodash": "^4.17.21",
     "react": "18.2.0",
@@ -36,7 +37,8 @@
     "react-native-svg": "^13.9.0",
     "react-redux": "^8.0.5",
     "redux-persist": "^6.0.0",
-    "styled-components": "5.3.10"
+    "styled-components": "5.3.10",
+    "yup": "^1.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -51,6 +53,7 @@
     "@types/react-redux": "^7.1.25",
     "@types/react-test-renderer": "^18.0.0",
     "@types/styled-components-react-native": "^5.2.1",
+    "@types/yup": "^0.32.0",
     "@typescript-eslint/eslint-plugin": "^5.59.6",
     "@typescript-eslint/parser": "^5.59.6",
     "babel-eslint": "^10.1.0",
